# SKYPRO_HW_27

./: .gitignore  manage.py  pyproject.toml
ads/: models.py  settings.py  urls.py  views.py
ads/fixtures/: ads.json  categories.json  script.py
ads/migrations/: 0001_initial.py
bvito/: asgi.py  settings.py  urls.py  wsgi.py
