[tool.poetry]
name = "hw_27"
version = "0.1.0"
description = ""
authors = ["mironov-anton <miron.khuzd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
